--- a/packages/app/src/subdomains/app/styles/index.scss
+++ b/packages/app/src/subdomains/app/styles/index.scss
@@ -7,3 +7,7 @@ APP STYLES
 @import 'webfonts';
 @import 'grid';
 @import 'layout';
+
+body {
+  overflow: hidden;
+}
